# Hangman-Game-Haskell

./: .gitignore  LICENSE  README.md  hangman.cabal  package.yaml
app/: Hangman.hs  Main.hs  Puzzle.hs  WordsList.hs
data/: dict.txt
